@@ -2592,7 +2592,7 @@ load_symbols (lang_input_statement_type *entry,
     {
       bfd_error_type err;
       bfd_boolean save_ldlang_sysrooted_script;
-      bfd_boolean save_as_needed, save_add_needed;
+      bfd_boolean save_as_needed, save_add_needed, save_whole_archive;
 
       err = bfd_get_error ();
 
@@ -2627,6 +2627,8 @@ load_symbols (lang_input_statement_type *entry,
       as_needed = entry->as_needed;
       save_add_needed = add_needed;
       add_needed = entry->add_needed;
+      save_whole_archive = whole_archive;
+      whole_archive = entry->whole_archive;
 
       ldfile_assumed_script = TRUE;
       parser_input = input_script;
@@ -2639,6 +2641,7 @@ load_symbols (lang_input_statement_type *entry,
       ldlang_sysrooted_script = save_ldlang_sysrooted_script;
       as_needed = save_as_needed;
       add_needed = save_add_needed;
+      whole_archive = save_whole_archive;
       pop_stat_ptr ();
 
       return TRUE;
